2019.2.0/_sources/generated/pymor.analyticalproblems.rst.txt
pymor.analyticalproblems package
********************************

.. automodule:: pymor.analyticalproblems
    :show-inheritance:

Submodules
==========

burgers module
--------------

.. automodule:: pymor.analyticalproblems.burgers
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.burgers.burgers_problem

---------


.. autofunction:: pymor.analyticalproblems.burgers.burgers_problem_2d

elliptic module
---------------

.. automodule:: pymor.analyticalproblems.elliptic
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.elliptic.StationaryProblem
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

helmholtz module
----------------

.. automodule:: pymor.analyticalproblems.helmholtz
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.helmholtz.helmholtz_problem

instationary module
-------------------

.. automodule:: pymor.analyticalproblems.instationary
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.instationary.InstationaryProblem
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

text module
-----------

.. automodule:: pymor.analyticalproblems.text
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.text.text_problem

thermalblock module
-------------------

.. automodule:: pymor.analyticalproblems.thermalblock
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.thermalblock.thermal_block_problem

