2020.1.1/_sources/generated/pymor.analyticalproblems.rst.txt
pymor.analyticalproblems package
********************************

.. automodule:: pymor.analyticalproblems
    :show-inheritance:

Submodules
==========

burgers module
--------------

.. automodule:: pymor.analyticalproblems.burgers
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.burgers.burgers_problem

---------


.. autofunction:: pymor.analyticalproblems.burgers.burgers_problem_2d

domaindescriptions module
-------------------------

.. automodule:: pymor.analyticalproblems.domaindescriptions
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.CircleDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.CircularSectorDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.CylindricalDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.DiscDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.DomainDescription
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.LineDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.PolygonalDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.RectDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.domaindescriptions.TorusDomain
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

elliptic module
---------------

.. automodule:: pymor.analyticalproblems.elliptic
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.elliptic.StationaryProblem
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

functions module
----------------

.. automodule:: pymor.analyticalproblems.functions
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.functions.BitmapFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.ConstantFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.ExpressionFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.Function
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.GenericFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.LincombFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

---------


.. autoclass:: pymor.analyticalproblems.functions.ProductFunction
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

helmholtz module
----------------

.. automodule:: pymor.analyticalproblems.helmholtz
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.helmholtz.helmholtz_problem

instationary module
-------------------

.. automodule:: pymor.analyticalproblems.instationary
    :show-inheritance:

---------


.. autoclass:: pymor.analyticalproblems.instationary.InstationaryProblem
    :show-inheritance:
    :members:
    :special-members:
    :exclude-members: __init__, __weakref__

text module
-----------

.. automodule:: pymor.analyticalproblems.text
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.text.text_problem

thermalblock module
-------------------

.. automodule:: pymor.analyticalproblems.thermalblock
    :show-inheritance:

---------


.. autofunction:: pymor.analyticalproblems.thermalblock.thermal_block_problem

